--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "tailwindcss": "3.3.3",
     "telegraf": "^4.16.3",
     "typescript": "5.1.6",
-    "viem": "^2.7.6"
+    "viem": "^2.7.6",
+    "encoding": "^0.1.13",
+    "pino-pretty": "^10.0.0"
   },
   "resolutions": {
     "viem": "^2.7.6",
