resolved dynamic issue

--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@dynamic-labs/ethereum": "4.0.0-alpha.1",
     "@dynamic-labs/sdk-react-core": "4.0.0-alpha.1",
     "@dynamic-labs/solana": "4.0.0-alpha.1",
+    "@dynamic-labs/wagmi-connector": "4.0.0-alpha.1",
+    "@tanstack/react-query": "5.56.2",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.4.5",
+    "encoding": "^0.1.13",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
+    "pino-pretty": "^10.0.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,8 +32,7 @@
     "telegraf": "^4.16.3",
     "typescript": "5.1.6",
     "viem": "^2.7.6",
-    "encoding": "^0.1.13",
-    "pino-pretty": "^10.0.0"
+    "wagmi": "^2.12.12"
   },
   "resolutions": {
     "viem": "^2.7.6",
