--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "encoding": "^0.1.13",
     "eslint": "8.47.0",
