--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@dynamic-labs/ethereum": "4.0.0-alpha.1",
     "@dynamic-labs/sdk-react-core": "4.0.0-alpha.1",
-    "@dynamic-labs/solana": "4.0.0-alpha.1",
+    "@dynamic-labs/solana": "^2.6.3",
     "@dynamic-labs/wagmi-connector": "4.0.0-alpha.1",
     "@tanstack/react-query": "5.56.2",
     "@types/node": "20.5.4",
@@ -23,8 +23,9 @@
     "encoding": "^0.1.13",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "ethers": "^6.13.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.19",
+    "next": "^14.2.15",
     "pino-pretty": "^10.0.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
