--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@dynamic-labs/solana": "^2.6.3",
     "@dynamic-labs/wagmi-connector": "4.0.0-alpha.1",
     "@tanstack/react-query": "5.56.2",
+    "@telegram-apps/sdk-react": "^2.0.9",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -27,7 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.15",
     "pino-pretty": "^10.0.0",
-    "postcss": "8.4.28",
+    "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
