--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,22 +26,21 @@
     "eslint-config-next": "13.4.19",
     "ethers": "^6.13.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.19",
+    "next": "^14.2.15",
     "pino-pretty": "^10.0.0",
     "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "telegraf": "^4.16.3",
-    "typescript": "5.4.2",
-    "viem": "2.21.53",
+    "typescript": "5.1.6",
+    "viem": "^2.7.6",
     "wagmi": "^2.12.12"
   },
   "resolutions": {
-    "viem": "2.21.53",
+    "viem": "^2.7.6",
     "@solana/web3.js": "1.91.6",
-    "rpc-websockets": "7.10.0",
-    "typescript": "5.4.2"
+    "rpc-websockets": "7.10.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
