--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "encoding": "^0.1.13",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "ethers": "^6.13.3",
+    "ethers": "^6.13.5",
+    "framer-motion": "^12.4.10",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.15",
     "pino-pretty": "^10.0.0",
